--- a/src/output.css
+++ b/src/output.css
@@ -632,10 +632,6 @@ video {
   cursor: pointer;
 }
 
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
 }
@@ -662,6 +658,10 @@ video {
 
 .gap-5{
   gap: 1.25rem;
+}
+
+.self-center{
+  align-self: center;
 }
 
 .border-b{
